<resources>
    <string name="app_name">InnoHome</string>

    <!-- Strings related to login -->
    <string name="login_copyright">The creation or login account means that you \n agree to our User Agreement and Privacy Policy</string>
    <string name="prompt_login">Log In</string>
    <string name="prompt_logout">Log Out</string>
    <string name="prompt_sign_out">Sign out</string>
    <string name="prompt_register_name">What is your name?</string>
    <string name="prompt_register_email">Your Email Address</string>
    <string name="prompt_register_password">Choose a Password</string>
    <string name="prompt_register_repeat">You already Have it!</string>
    <string name="prompt_forget_password">Forgot your password ?</string>
    <string name="prompt_password_reset">Reset Password</string>

    <string name="hint_name_first">First Name</string>
    <string name="hint_name_last">Last Name</string>
    <string name="hint_email">Enter the email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_code">Enter the Code</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Done</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to main -->
    <string name="main_text_name_format">%1$s %2$s</string>
    <string name="main_text_device_name_default">Everything</string>
    <string name="main_text_title">Home</string>
    <string name="main_text_language">Language</string>
    <string name="main_text_about">About</string>
    <string name="main_text_setting">Settings</string>
    <string name="main_text_home">Homes</string>
    <string name="main_text_home_add">Add Home</string>
    <string name="main_text_share">Shared Users</string>
    <string name="main_text_share_format">for “%1$s”</string>
    <string name="main_text_contact">Contact Us</string>
    <string name="main_text_device_add">Create</string>
    <string name="main_device_num_null">No devices</string>
    <string name="main_device_num_format">%1$d devices</string>
    <string name="main_dialog_text_home_name">Home name</string>
    <string name="main_dialog_text_home_title">Enter the name for your new home</string>

    <string name="main_shared_empty">Nobody share with you</string>

    <string name="edit_item_delete">Delete</string>
    <string name="edit_item_accept">Accept</string>
    <string name="edit_item_rename">Rename</string>
    <string name="edit_item_leave">Leave</string>

    <!-- Strings related to Device -->
    <string name="device_control_prompt">Monitoring..</string>
    <string name="device_status_online">Online</string>
    <string name="device_status_alarm">Alarm</string>
    <string name="device_status_offline">Offline</string>
    <string name="device_contact_format">%1$s (%2$s)</string>
    <string name="device_report_format">%1$s:%2$s.</string>
    <string name="device_info_number">Device Number</string>
    <string name="device_info_version">Firmware Version</string>
    <string name="device_info_mac">WiFi MAC Address</string>
    <string name="device_info_from">Added By</string>
    <string name="device_info_add_time">Added At</string>

    <!-- Strings related to Product -->
    <string name="product_text_title">Categories</string>
    <string name="product_text_water">Water Alarm</string>
    <string name="product_text_motion">Motion Alarm</string>
    <string name="product_text_window">Window Alarm</string>
    <string name="product_text_door">Door Alarm</string>
    <string name="product_text_person">Personal Alarm</string>
    <string name="product_text_smoke">Smoke Alarm</string>
    <string name="product_text_start">start</string>

    <!-- Strings related to person -->
    <string name="person_text_title">Me</string>
    <string name="person_text_language">Language</string>
    <string name="person_text_about">About</string>
    <string name="person_text_account">Account</string>
    <string name="person_text_avatar">Avatar</string>
    <string name="person_text_id">Id</string>
    <string name="person_text_name">Name</string>
    <string name="person_text_gender">Gender</string>
    <string name="person_text_email">Email</string>
    <string name="person_text_facebook">Facebook</string>
    <string name="person_text_password">Change Password</string>
    <string name="person_text_about_us">Ningbo Inno Technology Co., Ltd. is a safety electronic manufacturer focusing on designing and producing all kinds of Security Products.
        \n\n
Inno is established in the year of 2008 and located in Ningbo city the best developing manufacture area in China. Inno owns about 100 professional employees to contribute themselves to customers’ satisfaction.
        \n\n
Inno current products are PIR Motion Alarm, Burglar Alarm, Door Alarm, Window Alarm,  Personal Alarm, Water Leak Alarm, Alarm Lock, Dummy Camera etc.</string>
    <string name="person_text_camera">Camera</string>
    <string name="person_text_album">Album</string>
    <string name="person_text_male">Male</string>
    <string name="person_text_female">Female</string>

    <!-- Strings related to about -->
    <string name="about_title_us">About Us</string>
    <string name="about_title_agreement">User Agreement</string>
    <string name="about_title_policy">Privacy Policy</string>
    <string name="about_title_version">Version</string>

    <!-- Strings related to dialog -->
    <string name="prompt_modify_email">Please fill in the original password before changing the email.</string>
    <string name="text_sure">Sure</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_submit">Submit</string>
    <string name="text_net_no">网络错误，请重试</string>
    <string name="text_sign_out">是否退出登陆？</string>
    <string name="text_version_update">是否进行版本更新？</string>
    <string name="save">Save</string>
    <string name="text_invite">Invite</string>
    <string name="upload_error">Upload Error</string>
    <string name="loading">Loading……</string>
    <string name="toast_init_error">Init Error!</string>

    <string name="format_num">%1$d/%2$d</string>

</resources>
